<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="PMPS_GVL_BeamParams" Id="{5a450348-77b6-4641-9076-b559eb3a0be9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stReqFBDBeamParamsSum	:	ST_BeamParams;
	stReqMethBeamParamSum	:	ST_BeamParams;
	stCurrentBeamParameters	:	ST_BeamParams;
END_VAR
VAR_GLOBAL CONSTANT
	cstFullBeam	:	ST_BeamParams := (
		fAtt := 0,
		fPP_mJ := 1E4,
		fUpper_eV := 1E4,
		fLower_eV := 0
);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>